Add meta tags for search engines

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Yoga Club,yoga studio, yoga club for adults in Derby, England, United Kingdom">
+    <meta name="keywords" content="Yoga clubs, adult yoga classes, yoga studios, pilates, stretching, Derby, England, United Kingdom">
     <title>Yoga Club</title>
 </head>
 <body>
