--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Yoga Club,yoga studio, yoga club for adults in Derby, England, United Kingdom">
     <meta name="keywords" content="Yoga clubs, adult yoga classes, yoga studios, pilates, stretching, Derby, England, United Kingdom">
     <title>Yoga Club</title>
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!--Header-->
