--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <!--Header-->
-    <header>Header</header>
+    <header>
+        
+    </header>
 
     <!--Main content-->
     <main>Main content</main>
