--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <!--Header-->
     <header>
-        
+        <a href="index.html">
+            <h1 id="logo">Yoga Club</h1>
+        </a>
     </header>
 
     <!--Main content-->
