Create navigation section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <a href="index.html">
             <h1 id="logo">Yoga Club</h1>
         </a>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Location & Contacts</a></li>
+                <li><a href="">Classes</a></li>
+            </ul>
+        
     </header>
 
     <!--Main content-->
