Style the nav bar meun

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 id="logo">Yoga Club</h1>
         </a>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="" class="Home">Home</a></li>
                 <li><a href="">Location & Contacts</a></li>
                 <li><a href="">Classes</a></li>
             </ul>
