Add social media links to html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
     <main>Main content</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li> <a href="https://www.facebook.com/" target="_blank" rel="nonopener" 
+                aria-label="Visit our facebook page(opens in a new tab)">Facebook</a></li>
+            <li> <a href="https://www.twitter.com/" target="_blank" rel="nonopener"
+                aria-label="Visit our twitter page(opens in a new tab)"">Twitter</a></li>
+            <li> <a href="https://www.Instagram.com/" target="_blank" rel="nonopener" 
+                aria-label="Visit our instgram page (opens in a new tab)">Instagram</a></li>
+        </ul>
+    </footer>
     
 </body>
 </html>
