--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!--Footer-->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li> <a href="https://www.facebook.com/" target="_blank" rel="nonopener" 
                 aria-label="Visit our facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li> <a href="https://www.twitter.com/" target="_blank" rel="nonopener"
