Add images for home page

--- a/classes.html
+++ b/classes.html
@@ -22,6 +22,7 @@
                 <span><a href="" class="Register"><i class="fa-solid fa-user"></i></a></span>
         
         </nav>
+        <a href="classes.html">Classes</a>
         
     </header>
 
