--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
                 <span><a href="" class="Register"><i class="fa-solid fa-user"></i></a></span>
         
         </nav>
-        
+        <a href="register.html">Register</a>
     </header>
 
     <!--Main content-->
