--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Yoga Club,yoga studio, yoga club for adults in Derby, England, United Kingdom">
     <meta name="keywords" content="Yoga clubs, adult yoga classes, yoga studios, pilates, stretching, Derby, England, United Kingdom">
     <title>Yoga Club</title>
+    <!--Favicon-->
+
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/icons8-yoga-16.png">
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
