Add new content to main body

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
     <!--Main content-->
     <main>
         <section id="main-image"></section>
+
+        <h2 id="h2">What we offer</h2>
+
+        <div>
+            <p>Yoga, Pilates & Mindfulness with classes,workshops,treatments and yoga teacher training.</p>
+        </div>
+
+        <div>
+            <p>Beginner friendly classes, to make you healthier, happier and stronger.</p>
+        </div>
+
+        <div>
+            <p>A sisterhood studio founded in the heart of Derby.</p>
+        </div>
     </main>
 
     <!--Footer-->
