Add content to classes main body

--- a/register.html
+++ b/register.html
@@ -6,6 +6,11 @@
     <meta name="description" content="Yoga Club,yoga studio, yoga club for adults in Derby, England, United Kingdom">
     <meta name="keywords" content="Yoga clubs, adult yoga classes, yoga studios, pilates, stretching, Derby, England, United Kingdom">
     <title>Yoga Club</title>
+
+<!--Favicon-->
+
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/icons8-yoga-16.png">
+
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -17,12 +22,12 @@
         </a>
         <nav>
         
-                <span><a href="" class="Home"><i class="fa-solid fa-house"></i></a></span>
-                <span><a href=""  class="Classes"><i class="fa-solid fa-calendar-days"></i></a></span>
-                <span><a href="" class="Register"><i class="fa-solid fa-user"></i></a></span>
+                <span><a href="index.html" class="Home"><i class="fa-solid fa-house"></i></a></span>
+                <span><a href="classes.html"  class="Classes"><i class="fa-solid fa-calendar-days"></i></a></span>
+                <span><a href="register.html" class="Register"><i class="fa-solid fa-user"></i></a></span>
         
         </nav>
-        <a href="register.html">Register</a>
+
     </header>
 
     <!--Main content-->
