--- a/classes.html
+++ b/classes.html
@@ -33,24 +33,24 @@
 
     <!--Main content-->
     <main>
-        <h1 id="Available-classes">Available Classes</h1>
+        <h2 id="Available-classes">Available Classes</h2>
         <div id="times">
-            <div>
-                <h3>Pilates</h3>
+            <div id="pilates">
+                <h3><p>Pilates</p></h3>
                 <p>Monday</p>
                 <p>17:15</p>
                 <p>Rebecca Harrison</p>
                 <p>Studio</p>
             </div>
-            <div>
-                <h3>Yoga </h3>
+            <div id="yoga">
+                <h3><p>Yoga</p></h3>
                 <p>Wednesday</p>
                 <p>10:40</p>
                 <p>Teressa Whitaker</p>
                 <p>Studio</p>
             </div>
-            <div>
-                <h3>Zumba </h3>
+            <div id="zumba">
+                <h3> <p>Zumba</p></h3>
                 <p>Friday</p>
                 <p>18:15</p>
                 <p>Anna Sulojeva</p>
