Add contents to the main elements of the register.html file

--- a/register.html
+++ b/register.html
@@ -31,7 +31,27 @@
     </header>
 
     <!--Main content-->
-    <main>Main content</main>
+    <main>
+        <section id="register">
+            <form id="register-form" method="POST" action="https://github.com/Oluwapelumi99/Yoga-Club.git">
+                <h2> Register</h2>
+                <label for="first-name">First Name:</label>
+                <input type="text" name="first-name" id="first-name" class="text-input" required>
+                <br>
+                <label for="last-name">Last Name:</label>
+                <input type="text" name="last-name" id="last-name" class="text-input" required>
+                <br>
+                <label for="email-address">Email Address:</label>
+                <input type="email" name="email-address" id="email-address" class="text-input" required>
+                <br>
+                <label for="phone-number">Phone Number:</label>
+                <input type="text" name="phone-number" id="phone-number" class="text-input" required>
+                </div>
+                <br>
+                <button type="submit" class="confirm">Confirm</button>
+            </form>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
