--- a/classes.html
+++ b/classes.html
@@ -33,6 +33,8 @@
 
     <!--Main content-->
     <main>
+        <section>
+            <video id="background-video" src="./assets/css/videos/pexels_videos_2786540 (240p).mp4" width="100%" height="600px" autoplay muted loop></video>
         <h2 id="Available-classes">Available Classes</h2>
         <div id="times">
             <div id="pilates">
@@ -57,6 +59,7 @@
                 <p>Studio</p>
             </div>
         </div>
+        </section>
     </main>
 
     <!--Footer-->
