--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <li> <a href="https://www.facebook.com/" target="_blank" rel="nonopener" 
                 aria-label="Visit our facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li> <a href="https://www.twitter.com/" target="_blank" rel="nonopener"
-                aria-label="Visit our twitter page(opens in a new tab)""><i class="fa-brands fa-x-twitter"></i></a></li>
+                aria-label="Visit our twitter page(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
             <li> <a href="https://www.Instagram.com/" target="_blank" rel="nonopener" 
                 aria-label="Visit our instgram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
