--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!--Main content-->
     <main>
         <section id="main-image"> </section>
+            <div> 
 
         <h2 id="h2">What we offer</h2>
 
