Change section element on row 34 to a div element

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!--Main content-->
     <main>
-        <section id="main-image"> </section>
+        <div id="main-image"></div>
             <div> 
 
         <h2 id="h2">What we offer</h2>
@@ -45,6 +45,7 @@
             <p>Beginner friendly classes, to make you confident, healthier, happier and stronger.</p>
         
         </div>
+            </div>
     </main>
 
     <!--Footer-->
