--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@
                 <br>
                 <label for="phone-number">Phone Number:</label>
                 <input type="text" name="phone-number" id="phone-number" class="text-input" required>
-                </div>
+            
                 <br>
                 <button type="submit" class="confirm">Confirm</button>
             </form>
@@ -59,7 +59,7 @@
             <li> <a href="https://www.facebook.com/" target="_blank" rel="nonopener" 
                 aria-label="Visit our facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li> <a href="https://www.twitter.com/" target="_blank" rel="nonopener"
-                aria-label="Visit our twitter page(opens in a new tab)""><i class="fa-brands fa-x-twitter"></i></a></li>
+                aria-label="Visit our twitter page(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
             <li> <a href="https://www.Instagram.com/" target="_blank" rel="nonopener" 
                 aria-label="Visit our instgram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
         </ul>
