Add an h2 element in the index.html and add some contents

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <!--Main content-->
     <main>
         <div id="main-image"></div>
+        <h2 id="h2">What are we</h2>
+        <p>We are the first ladies only yoga studio founded in the heart of Derby, focusing on yoga exercises,
+            to provide relaxation of the spirit,soul and body</p>
             <div> 
-        <h2 id="h2">What we offer</h2>
+        <h3 id="h3">What we offer</h3>
         <div>
-            <p>The first lady's only yoga studio founded in the heart of Derby</p>
             <p>Yoga, Pilates & Mindfulness with <span><a href="classes.html" class="Classes">classes</a></span>,workshops,treatments and yoga teacher training.</p>
             <p>Beginner friendly classes, to make you confident, healthier, happier and stronger.</p>
         </div>
