Add new font-family to the body styles

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <main>
         <div id="main-image"></div>
         <h2 id="h2">What are we</h2>
-        <p>We are the first ladies only yoga studio founded in the heart of Derby, focusing on yoga exercises,
-            to provide relaxation of the spirit,soul and body</p>
+        <p>We are the first ladies only yoga studio, founded in the heart of Derby. We focus on yoga exercises 
+            that provide relaxation of the spirit,soul and body.</p>
             <div> 
         <h3 id="h3">What we offer</h3>
         <div>
