--- a/index.html
+++ b/index.html
@@ -27,15 +27,12 @@
     <main>
         <div id="main-image"></div>
         <h2 id="h2">What are we</h2>
-        <p>We are the first ladies only yoga studio, founded in the heart of Derby. We focus on yoga exercises 
-            that provide relaxation of the spirit,soul and body.</p>
-            <div> 
-        <h3 id="h3">What we offer</h3>
-        <div>
+            <p>We are the first ladies only yoga studio, founded in the heart of Derby. We focus on yoga exercises 
+            that provide relaxation of the spirit,mind and body.</p>    
+       <h3 id="h3">What we offer</h3>
             <p>Yoga, Pilates & Mindfulness with <span><a href="classes.html" class="Classes">classes</a></span>,workshops,treatments and yoga teacher training.</p>
             <p>Beginner friendly classes, to make you confident, healthier, happier and stronger.</p>
-        </div>
-            </div>
+        
     </main>
     <!--Footer-->
     <footer>
