Add new image and video with description to image and video video folders

--- a/classes.html
+++ b/classes.html
@@ -27,7 +27,7 @@
     <main>
         <!--Background video-->
         <section>
-            <video id="background-video" src="./assets/css/videos/pexels_videos_2786540(240p).mp4" autoplay muted loop></video>        
+            <video id="background-video" src="./assets/videos/lady-walking-with-yoga-mat-and-water-bottle.mp4" autoplay muted loop></video>        
         <div id="classes">
         <div>
             <h2 id="Available-classes">Our Weekly Classes</h2>
