Create 2 new files thankyou.html and 404.html

--- a/register.html
+++ b/register.html
@@ -20,16 +20,16 @@
         </a>
         <!--Navigation bar elements-->
         <nav>
-                <span><a href="index.html" class="Home"><i class="fa-solid fa-house"></i></a></span>
-                <span><a href="classes.html"  class="Classes"><i class="fa-solid fa-calendar-days"></i></a></span>
-                <span><a href="register.html" class="Register"><i class="fa-solid fa-user-plus"></i></a></span>
+                <span><a href="index.html" class="Home" aria-label="Visit our home page(Opens on this website)"><i class="fa-solid fa-house"></i></a></span>
+                <span><a href="classes.html"  class="Classes" aria-label="Visit our classes page(Opens on this website)"><i class="fa-solid fa-calendar-days"></i></a></span>
+                <span><a href="register.html" class="Register" aria-label="Visit our registration page(Opens on this website)"><i class="fa-solid fa-user-plus"></i></a></span>
         </nav>
     </header>
     <!--Main content-->
     <main>
         <!--Registration forms elements-->
         <section id="register">
-            <form id="register-form" method="POST" action="https://github.com/Oluwapelumi99/Yoga-Club.git">
+            <form id="register-form" method="GET" action="thankyou.html">
                 <h2> Register</h2>
                 <label for="first-name">First Name:</label>
                 <input type="text" name="first-name" id="first-name" class="text-input" required>
