--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h1 id="logo">Mediat yoga</h1>
         </a>
         <nav>        
-                <span><a href="index.html" class="Home"><i class="fa-solid fa-house"></i></a></span>
-                <span><a href="classes.html"  class="Classes"><i class="fa-solid fa-calendar-days"></i></a></span>
-                <span><a href="register.html" class="Register"><i class="fa-solid fa-user-plus"></i></a></span>
+                <span><a href="index.html" class="Home" aria-label="Visit our home page(Opens on this website)"><i class="fa-solid fa-house"></i></a></span>
+                <span><a href="classes.html"  class="Classes" aria-label="Visit our classes page(Opens on this website)"><i class="fa-solid fa-calendar-days"></i></a></span>
+                <span><a href="register.html" class="Register" aria-label="Visit our registration page(Opens on this website)"><i class="fa-solid fa-user-plus"></i></a></span>
         </nav>   
     </header>
     <!--Main content-->
