--- a/thankyou.html
+++ b/thankyou.html
@@ -33,9 +33,8 @@
     <!--Main content-->
     <main>
        <div>
-        <p>Thank you for contacting us. 
-            <hr>
-           Our team will get back to you shortly.</p>
+        <h2>Thank you for contacting us.</h2> 
+           <p>Our team will get back to you shortly.</p>
        </div>
     </main>
     <!--Footer-->
