--- a/register.html
+++ b/register.html
@@ -20,9 +20,12 @@
         </a>
         <!--Navigation bar elements-->
         <nav>
-                <span><a href="index.html" class="Home" aria-label="Visit our home page(Opens on this website)"><i class="fa-solid fa-house"></i></a></span>
-                <span><a href="classes.html"  class="Classes" aria-label="Visit our classes page(Opens on this website)"><i class="fa-solid fa-calendar-days"></i></a></span>
-                <span><a href="register.html" class="Register" aria-label="Visit our registration page(Opens on this website)"><i class="fa-solid fa-user-plus"></i></a></span>
+                <span><a href="index.html" class="Home" 
+                    aria-label="Visit our home page(Opens on this website)"><i class="fa-solid fa-house"></i></a></span>
+                <span><a href="classes.html"  class="Classes" 
+                    aria-label="Visit our classes page(Opens on this website)"><i class="fa-solid fa-calendar-days"></i></a></span>
+                <span><a href="register.html" class="Register" 
+                    aria-label="Visit our registration page(Opens on this website)"><i class="fa-solid fa-user-plus"></i></a></span>
         </nav>
     </header>
     <!--Main content-->
