--- a/thankyou.html
+++ b/thankyou.html
@@ -33,7 +33,7 @@
     <!--Main content-->
     <main>
        <div>
-        <h2>Thank you for contacting us.</h2> 
+        <h2>Thank you for contacting Mediat yoga studio.</h2> 
            <p>Our team will get back to you shortly.</p>
        </div>
     </main>
