--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
     <!--Main content-->
     <main>
         <div>
-            <h2>404</h2>
+            <h2 id="error">404</h2>
             <P>Page not found</P>
             <p><span><a href="index.html" class="Home" aria-label="Visit our home page(Opens on this website)">Click here</a></span>to return to our page</p>
         </div>
