--- a/thankyou.html
+++ b/thankyou.html
@@ -35,6 +35,7 @@
        <div>
         <h2>Thank you for contacting Mediat yoga studio.</h2> 
            <p>Our team will get back to you shortly.</p>
+           <section id="thankyou-image"></section>
        </div>
     </main>
     <!--Footer-->
