Add a image on the thank you page

--- a/thankyou.html
+++ b/thankyou.html
@@ -32,10 +32,13 @@
     </header>
     <!--Main content-->
     <main>
-       <div>
-        <h2>Thank you for contacting Mediat yoga studio.</h2> 
-           <p>Our team will get back to you shortly.</p>
+       <div id="thankyou-text">
+        <h2>Thank you for contacting Mediat yoga studio!</h2> 
+           <p>Our team will get back to you shortly!</p>
+       </div>
+       <div id="thank-you-image">
            <section id="thankyou-image"></section>
+
        </div>
     </main>
     <!--Footer-->
