--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
 <body>
     <!--Header-->
     <header>
+        <!--Anchor link to take yu yo the home page-->
         <a href="index.html">
             <h1 id="logo">Mediat yoga</h1>
         </a>
