--- a/register.html
+++ b/register.html
@@ -15,6 +15,7 @@
 <body>
     <!--Header-->
     <header>
+        <!--Anchor link to take yu yo the home page-->
         <a href="index.html">
             <h1 id="logo">Mediat yoga</h1>
         </a>
@@ -26,6 +27,8 @@
                     aria-label="Visit our classes page(Opens on this website)"><i class="fa-solid fa-calendar-days"></i></a></span>
                 <span><a href="register.html" class="Register" 
                     aria-label="Visit our registration page(Opens on this website)"><i class="fa-solid fa-user-plus"></i></a></span>
+                <span><a href="thankyou.html"></a></span>
+                <span><a href="404.html" class="404"></a></span>
         </nav>
     </header>
     <!--Main content-->
