--- a/register.html
+++ b/register.html
@@ -33,6 +33,7 @@
     </header>
     <!--Main content-->
     <main>
+        <div id="register-image"></div>
         <!--Registration forms elements-->
         <section id="register">
             <form id="register-form" method="GET" action="thankyou.html">
