--- a/classes.html
+++ b/classes.html
@@ -65,7 +65,7 @@
     <footer>
         <ul id="social-networks">
             <li> <a href="https://www.facebook.com/" target="_blank" rel="nonopener" 
-                aria-label="Visit our facebook page(opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+                aria-label="Visit our facebook page(opens in a new tab)""><i class="fa-brands fa-facebook"></i></a></li>
             <li> <a href="https://www.twitter.com/" target="_blank" rel="nonopener"
                 aria-label="Visit our twitter page(opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
             <li> <a href="https://www.Instagram.com/" target="_blank" rel="nonopener" 
