Add a more optimzed  main image

--- a/404.html
+++ b/404.html
@@ -16,14 +16,17 @@
     <!--Header-->
     <header>
         <!--Anchor link to take yu yo the home page-->
-        <a href="index.html">
+        <a href="mediat-yoga.html">
             <h1 id="logo">Mediat yoga</h1>
         </a>
         <!--Navigation bar elements-->
         <nav>
-                <span><a href="index.html" class="Home" aria-label="Visit our home page(Opens on this website)"><i class="fa-solid fa-house"></i></a></span>
-                <span><a href="classes.html"  class="Classes" aria-label="Visit our classes page(Opens on this website)"><i class="fa-solid fa-calendar-days"></i></a></span>
-                <span><a href="register.html" class="Register" aria-label="Visit our registration page(Opens on this website)"><i class="fa-solid fa-user-plus"></i></a></span>
+                <span><a href="index.html" class="Home" 
+                    aria-label="Visit our home page(Opens on this website)"><i class="fa-solid fa-house"></i></a></span>
+                <span><a href="classes.html"  class="Classes" 
+                    aria-label="Visit our classes page(Opens on this website)"><i class="fa-solid fa-calendar-days"></i></a></span>
+                <span><a href="register.html" class="Register" 
+                    aria-label="Visit our registration page(Opens on this website)"><i class="fa-solid fa-user-plus"></i></a></span>
         </nav>
     </header>
     <!--Main content-->
@@ -31,7 +34,7 @@
         <div>
             <h2 id="error">404</h2>
             <P>Page not found</P>
-            <p><span><a href="index.html" class="Home" aria-label="Visit our home page(Opens on this website)">Click here</a></span>to return to our page</p>
+            <p><span><a href="mediat-yoga.html" class="Home" aria-label="Visit our home page(Opens on this website)">Click here</a></span> to return to our page</p>
         </div>
     </main>
     <!--Footer-->
