--- a/classes.html
+++ b/classes.html
@@ -15,7 +15,7 @@
     <!--Header-->
     <header>
         <!--Anchor link to take yu yo the home page-->
-        <a href="index.html">
+        <a href="mediat-yaga.html">
             <h1 id="logo">Mediat yoga</h1>
         </a>
         <nav>
