--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
     <!--Header-->
     <header>
         <!--Anchor link to take yu yo the home page-->
-        <a href="mediat-yoga.html">
+        <a href="index.html">
             <h1 id="logo">Mediat yoga</h1>
         </a>
         <!--Navigation bar elements-->
