Add text to 404.html and update README.md

--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
         <div>
             <h2 id="error">404</h2>
             <P>Page not found</P>
-            <p><span><a href="index.html" class="Home" aria-label="Visit our home page(Opens on this website)">Click here</a></span> to return to our page</p>
+            <p><span><a href="index.html" class="Home" aria-label="Visit our home page(Opens on this website)">Click here</a></span> to return to our home page</p>
         </div>
     </main>
     <!--Footer-->
