Change section element in the main elemet of the than you page to a div as it brought up a warning when tested on html validator W3C

--- a/thankyou.html
+++ b/thankyou.html
@@ -15,7 +15,7 @@
 <body>
     <!--Header-->
     <header>
-        <!--Anchor link to take yu yo the home page-->
+        <!--Anchor link to take you to the home page-->
         <a href="index.html">
             <h1 id="logo">Mediat yoga</h1>
         </a>
@@ -38,7 +38,7 @@
            <p>Our team will get back to you shortly!</p>
        </div>
        <div id="thank-you-image">
-           <section id="thankyou-image"></section>
+           <div id="thankyou-image"></div>
 
        </div>
     </main>
