--- a/register.html
+++ b/register.html
@@ -27,8 +27,8 @@
                     aria-label="Visit our classes page(Opens on this website)"><i class="fa-solid fa-calendar-days"></i></a></span>
                 <span><a href="register.html" class="Register" 
                     aria-label="Visit our registration page(Opens on this website)"><i class="fa-solid fa-user-plus"></i></a></span>
-                <span><a href="thankyou.html"></a></span>
-                <span><a href="404.html" class="404"></a></span>
+                <span><a href="thankyou.html" class="hidden">Thank you</a></span>
+                <span><a href="404.html" class="404" id="hidden">404</a></span>
         </nav>
     </header>
     <!--Main content-->
