--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Yoga clubs, adult yoga classes, yoga studios, pilates, stretching, Derby, England, United Kingdom">
     <title>Mediat yoga</title>
 <!--Favicon-->
-<link rel="icon" type="image/png" sizes="16x16" href="favicon/icons8-yoga-16.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/icons8-yoga-16.png">
 
     <!--Stylesheet-->
     <link rel="stylesheet" href="assets/css/style.css">
